Create streamlin app

--- a/regression/deployment_demo/index.html
+++ b/regression/deployment_demo/index.html
@@ -99,7 +99,7 @@
 
         <div class="field">
             <label>Locality</label>
-            <input id="locality" value="Goregaon East">
+            <input id="locality" value="Powai">
         </div>
 
         <div class="field">
